@@ -1,3 +1,7 @@
+2013-05-11 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Make sure the root fs is mounted read only in mountfs
+     before halting
+
 2013-01-24 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Remove local attribue of some variables for Bourne
      shell compatability
